chore: fix sonarqube issues